2007-07-18  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-hooks.el: Generalize stay-local-p to operate on lists of
	files.  Change two keybindings to point to new function names.

2007-07-18  Juanma Barranquero  <lekktu@gmail.com>
	* follow.el (follow-mode-hook, follow-mode-off-hook, follow-mode)
	(follow-delete-other-windows-and-split, follow-recenter)
	(follow-windows-aligned-p, follow-point-visible-all-windows-p)
	(follow-redisplay, follow-estimate-first-window-start)
	(follow-xemacs-scrollbar-support, follow-intercept-process-output):
	Fix typos in docstrings.

2007-07-18  Martin Rudalics  <rudalics@gmx.at>

	* add-log.el (change-log-mode): Use fill-nobreak-predicate to
	avoid that filling introduces lines with a single asterisk.

	* kmacro.el (kmacro-end-macro): When ignoring empty macro
	avoid incorrect kmacro-ring-empty-p messages.
	Reported by Michael Schierl <schierlm@gmx.de>.

2007-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (file-remote-p): Introduce optional parameter
	IDENTIFICATION.

	* recentf.el (recentf-keep-default-predicate): Adapt call of
	`file-remote-p'.

	* progmodes/grep.el (grep-probe): Use `process-file'.
	(grep-compute-defaults): Handle variables host specific.

	* net/ange-ftp.el (ange-ftp-file-remote-p): Handle optional
	parameter IDENTIFICATION.

	* net/tramp.el (tramp-handle-file-remote-p): Handle optional
	parameter IDENTIFICATION.
	(tramp-handle-set-file-times): New defun.  Replaces `tramp-touch'.
	(tramp-file-name-handler-alist, tramp-file-name-for-operation):
	Add entry for `set-file-times'.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-out-of-band): Use `set-file-times'.
	(tramp-handle-unhandled-file-name-directory): Rewrite.
	(tramp-convert-file-attributes): Add error handling when inode is
	extraordinary big.
	(tramp-get-inode): Change parameter from FILE to VEC.
	(tramp-handle-start-file-process): Use (current-buffer) if BUFFER