@@ -1,3 +1,7 @@
+2007-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* uniquify.el: Docstring fixes.
+
 2007-07-18  Eric S. Raymond  <esr@snark.thyrsus.com>
 
 	* vc-hooks.el: Generalize stay-local-p to operate on lists of
